[package]
name = "pg_sse"
version = "0.1.0"
authors = ["Alex Tkachuk <sasha.tkachuk@gmail.com>"]
edition = "2018"

[dependencies]
serde = "^1.0.101"
serde_derive = "^1.0.101"
serde_json = "^1.0.41"
actix-rt = "^1.0.0"
actix-web = { version="2.0.0", features=["rustls"] }
actix-service = "^1.0.0"
actix-cors = "^0.2.0"
env_logger = "^0.7.0"
jsonwebtoken = "^7.0.1"
rustls = "^0.16.0"
validator = "^0.10.0"
validator_derive = "^0.10.0"
futures = "^0.3.4"
tokio = "^0.2"
lapin = { version="0.29.2", features=["futures"] }
